# factor-risk-viewer

./: .gitignore  DEPLOY.md  README.md
backend/: api.py  build_snapshot.py  build_weekly_cov.py  inspect_snapshot.py  lru_zarr.py  pyproject.toml  schema.py
backend/bench/: factor_contrib_bench.py  factor_contrib_decode_only.py  factor_contrib_minio_bench.py  factor_contrib_minio_multipart.py  factor_contrib_output_bench.py  factor_contrib_pandas_bench.py  formats.py  full_mode_profile.py  orjson_compare.py  pandas_bench.py  quadratic_bench.py  server_bench.py  streaming_compare.py  test_formats.py  zarr_local_sim.py  zarr_minio_sim.py
backend/bench/results/: fps.json  frontend_bench.json  orjson_compare.json  pandas_bench.json
docs/experiments/: 2026-04-26-covariance-payload-formats.md
docs/superpowers/plans/: 2026-04-26-covariance-payload-formats-experiment.md
docs/superpowers/specs/: 2026-04-26-covariance-payload-formats-experiment-design.md
experiments/: README.md
experiments/2026-04-26-covariance-payload-formats/: README.md  report.md
experiments/2026-04-27-charts-experiment/: README.md
experiments/2026-04-27-on-the-fly-risk/: README.md  plan.md  report.md  spec.md
experiments/2026-05-07-batch-factor-contribution-perf/: README.md  plan.md  report.md  spec.md
frontend/: .gitignore  deploy.sh  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json
frontend/public/mock/: cov_dates.json  dates.json  (+6 more)
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: charts.spec.ts  mock-mode.spec.ts  risk-over-time.spec.ts
(+35 files in other folders)
