[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "orjson>=3.11.8",
    "pytest>=8.0",
]
